--- a/lesson22/lesson22_3.ipynb
+++ b/lesson22/lesson22_3.ipynb
@@ -706,6 +706,450 @@
     "#dataFrame的groupby()\n",
     "youbike_df.groupby('行政區')[['數量','可借','可還']].sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">數量</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">可借</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">可還</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>行政區</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>三峽區</th>\n",
+       "      <td>458</td>\n",
+       "      <td>46</td>\n",
+       "      <td>10</td>\n",
+       "      <td>143</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>294</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>三重區</th>\n",
+       "      <td>946</td>\n",
+       "      <td>44</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>848</td>\n",
+       "      <td>43</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>五股區</th>\n",
+       "      <td>376</td>\n",
+       "      <td>32</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>336</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>土城區</th>\n",
+       "      <td>656</td>\n",
+       "      <td>50</td>\n",
+       "      <td>8</td>\n",
+       "      <td>41</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>586</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>新莊區</th>\n",
+       "      <td>1070</td>\n",
+       "      <td>64</td>\n",
+       "      <td>10</td>\n",
+       "      <td>64</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>947</td>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>板橋區</th>\n",
+       "      <td>1434</td>\n",
+       "      <td>60</td>\n",
+       "      <td>10</td>\n",
+       "      <td>54</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>樹林區</th>\n",
+       "      <td>782</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>77</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>672</td>\n",
+       "      <td>38</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>泰山區</th>\n",
+       "      <td>222</td>\n",
+       "      <td>64</td>\n",
+       "      <td>14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>143</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>淡水區</th>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>蘆洲區</th>\n",
+       "      <td>452</td>\n",
+       "      <td>46</td>\n",
+       "      <td>10</td>\n",
+       "      <td>36</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>395</td>\n",
+       "      <td>45</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>鶯歌區</th>\n",
+       "      <td>384</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>101</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>238</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       數量           可借            可還        \n",
+       "      sum max min  sum max min   sum max min\n",
+       "行政區                                         \n",
+       "三峽區   458  46  10  143  25   0   294  45   0\n",
+       "三重區   946  44   8   77   6   0   848  43   4\n",
+       "五股區   376  32  10   23   6   0   336  30   9\n",
+       "土城區   656  50   8   41   5   0   586  48   5\n",
+       "新莊區  1070  64  10   64   5   0   947  60   6\n",
+       "板橋區  1434  60  10   54   3   0  1299  59   3\n",
+       "樹林區   782  40  10   77  19   0   672  38   7\n",
+       "泰山區   222  64  14   11   6   0   143  34   0\n",
+       "淡水區    28  28  28    0   0   0    28  28  28\n",
+       "蘆洲區   452  46  10   36  11   0   395  45   7\n",
+       "鶯歌區   384  40  10  101  17   0   238  35   6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "youbike_df.groupby('行政區')[['數量','可借','可還']].agg(['sum','max','min'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">數量</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">可借</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">可還</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>總量</th>\n",
+       "      <th>最多</th>\n",
+       "      <th>最少</th>\n",
+       "      <th>總量</th>\n",
+       "      <th>最多</th>\n",
+       "      <th>最少</th>\n",
+       "      <th>總量</th>\n",
+       "      <th>最多</th>\n",
+       "      <th>最少</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>行政區</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>三峽區</th>\n",
+       "      <td>458</td>\n",
+       "      <td>46</td>\n",
+       "      <td>10</td>\n",
+       "      <td>143</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>294</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>三重區</th>\n",
+       "      <td>946</td>\n",
+       "      <td>44</td>\n",
+       "      <td>8</td>\n",
+       "      <td>77</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>848</td>\n",
+       "      <td>43</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>五股區</th>\n",
+       "      <td>376</td>\n",
+       "      <td>32</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>336</td>\n",
+       "      <td>30</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>土城區</th>\n",
+       "      <td>656</td>\n",
+       "      <td>50</td>\n",
+       "      <td>8</td>\n",
+       "      <td>41</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>586</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>新莊區</th>\n",
+       "      <td>1070</td>\n",
+       "      <td>64</td>\n",
+       "      <td>10</td>\n",
+       "      <td>64</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>947</td>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>板橋區</th>\n",
+       "      <td>1434</td>\n",
+       "      <td>60</td>\n",
+       "      <td>10</td>\n",
+       "      <td>54</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>樹林區</th>\n",
+       "      <td>782</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>77</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>672</td>\n",
+       "      <td>38</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>泰山區</th>\n",
+       "      <td>222</td>\n",
+       "      <td>64</td>\n",
+       "      <td>14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>143</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>淡水區</th>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>蘆洲區</th>\n",
+       "      <td>452</td>\n",
+       "      <td>46</td>\n",
+       "      <td>10</td>\n",
+       "      <td>36</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>395</td>\n",
+       "      <td>45</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>鶯歌區</th>\n",
+       "      <td>384</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10</td>\n",
+       "      <td>101</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>238</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       數量           可借           可還        \n",
+       "       總量  最多  最少   總量  最多 最少    總量  最多  最少\n",
+       "行政區                                        \n",
+       "三峽區   458  46  10  143  25  0   294  45   0\n",
+       "三重區   946  44   8   77   6  0   848  43   4\n",
+       "五股區   376  32  10   23   6  0   336  30   9\n",
+       "土城區   656  50   8   41   5  0   586  48   5\n",
+       "新莊區  1070  64  10   64   5  0   947  60   6\n",
+       "板橋區  1434  60  10   54   3  0  1299  59   3\n",
+       "樹林區   782  40  10   77  19  0   672  38   7\n",
+       "泰山區   222  64  14   11   6  0   143  34   0\n",
+       "淡水區    28  28  28    0   0  0    28  28  28\n",
+       "蘆洲區   452  46  10   36  11  0   395  45   7\n",
+       "鶯歌區   384  40  10  101  17  0   238  35   6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "youbike_df.groupby('行政區')[['數量','可借','可還']].agg([('總量','sum'),('最多','max'),('最少','min')])"
+   ]
   }
  ],
  "metadata": {
